# MD-Workshop

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  index.html  package-lock.json  package.json  vite.config.ts
demo/: Accueil.md  Raccourcis clavier.md  À propos.md
demo/Journal/: 2026-04-17.md
demo/notes/: Markdown 101.md  Obsidian vs MD Workshop.md  Tags.md  Wikilinks.md
demo/projets/: Idées.md  Phase 4 - Graphe.md
docs/: preview-editing.md
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main-capability.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs
src/components/: BacklinksPanel.tsx  BrokenLinksDialog.tsx  CommandPalette.tsx  ExportSiteDialog.tsx  FileTree.tsx  GraphControls.tsx  GraphView.tsx  LibraryPicker.tsx  LibrarySwitcher.tsx  MarkdownEditor.tsx  OutlinePanel.tsx  PreviewEditor.tsx  PreviewPane.tsx  PreviewPaneReadonly.tsx  QuickOpen.tsx  ReplacePanel.tsx  SearchPanel.tsx  SettingsDialog.tsx  SlidePresenter.tsx  SnippetsDialog.tsx  TabBar.tsx
src/lib/: codemirror.ts  editorActions.ts  markdown.ts  pdfExport.ts  settings.ts  slides.ts  snippets.ts  staticSite.ts  staticSiteStyles.ts  whatsapp.ts  wikilinks.ts
src/lib/tiptap/: extensions.ts  frontMatter.ts  imageNode.ts  wikiLink.ts
