[package]
name = "md-workshop"
version = "0.1.0"
description = "Markdown workshop desktop app"
authors = ["Simon Grossi"]
edition = "2021"

[lib]
name = "md_workshop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.8", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.4"
walkdir = "2.5"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
rusqlite = { version = "0.35", features = ["bundled"] }
rayon = "1.10"
